--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <title>Firma Navn ApS</title>
 <style>
-  /* Generelt */
   html {
     scroll-behavior: smooth;
   }
@@ -18,8 +17,6 @@
     flex-direction: column;
     align-items: center;
   }
-
-  /* Header */
   header {
     background: linear-gradient(to right, #004080, #003366);
     color: #cce0ff;
@@ -62,16 +59,12 @@
     color: #003366;
     border-color: #003366;
   }
-
-  /* Main indhold */
   main {
-    margin-top: 60px; /* plads til fixed header */
+    margin-top: 60px;
     width: 90%;
     max-width: 960px;
     padding-bottom: 3rem;
   }
-
-  /* Sektioner */
   section {
     background: #cce0ff;
     border: 2px solid #003366;
@@ -101,8 +94,6 @@
     list-style-type: square;
     padding-left: 1.7rem;
   }
-
-  /* Kontakt knap */
   a.contact-btn {
     display: inline-block;
     margin-top: 1.5rem;
@@ -123,8 +114,6 @@
     background: #cce0ff;
     color: #003366;
   }
-
-  /* Footer */
   footer {
     width: 100%;
     max-width: 960px;
@@ -178,10 +167,7 @@
   &copy; 2025 Firma Navn ApS<br />
   CVR: 12345678
 </footer>
-
-
 <script>
-  // Aktiv menu baseret på scroll position
   const links = document.querySelectorAll('.nav-link');
   window.addEventListener('scroll', () => {
     let current = '';
@@ -195,6 +181,5 @@
     });
   });
 </script>
-
 </body>
 </html>
